RESOLVED FIXED58135
Web Inspector: Failed/canceled resource requests kept showing as Pending in network panel.
https://bugs.webkit.org/show_bug.cgi?id=58135
Summary Web Inspector: Failed/canceled resource requests kept showing as Pending in n...
Vsevolod Vlasov
Reported 2011-04-08 05:18:17 PDT
Failed/cancelled resource requests (e.g. downloads) should be marked as such in network panel.
Attachments
Patch (5.04 KB, patch)
2011-04-08 05:34 PDT, Vsevolod Vlasov
no flags
Patch (5.05 KB, patch)
2011-04-08 05:36 PDT, Vsevolod Vlasov
no flags
Patch (binary diff) (5.16 KB, patch)
2011-04-08 05:38 PDT, Vsevolod Vlasov
no flags
Patch (s/cancelled/canceled) (5.15 KB, patch)
2011-04-08 06:57 PDT, Vsevolod Vlasov
no flags
Patch () (5.15 KB, patch)
2011-04-08 06:58 PDT, Vsevolod Vlasov
no flags
Vsevolod Vlasov
Comment 1 2011-04-08 05:34:28 PDT
Vsevolod Vlasov
Comment 2 2011-04-08 05:36:50 PDT
Vsevolod Vlasov
Comment 3 2011-04-08 05:38:11 PDT
Created attachment 88806 [details] Patch (binary diff)
Pavel Feldman
Comment 4 2011-04-08 06:43:40 PDT
Comment on attachment 88806 [details] Patch (binary diff) View in context: https://bugs.webkit.org/attachment.cgi?id=88806&action=review > Source/WebCore/ChangeLog:5 > + Web Inspector: Failed/cancelled resource requests kept showing as Pending in network panel. canceled > Source/WebCore/inspector/Inspector.json:436 > + { "name": "cancelled", "type": "boolean", "description": "True if loading was cancelled." } canceled > Source/WebCore/inspector/front-end/NetworkPanel.js:1511 > + this._statusCell.textContent = WebInspector.UIString("(stopped)"); canceled
Vsevolod Vlasov
Comment 5 2011-04-08 06:57:15 PDT
Created attachment 88815 [details] Patch (s/cancelled/canceled)
Vsevolod Vlasov
Comment 6 2011-04-08 06:58:54 PDT
Created attachment 88816 [details] Patch ()
WebKit Commit Bot
Comment 7 2011-04-12 01:29:59 PDT
Comment on attachment 88816 [details] Patch () Clearing flags on attachment: 88816 Committed r83564: <http://trac.webkit.org/changeset/83564>
WebKit Commit Bot
Comment 8 2011-04-12 01:30:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.