2011-04-12  Vsevolod Vlasov  <vsevik@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: Failed/canceled resource requests kept showing as Pending in network panel.
        https://bugs.webkit.org/show_bug.cgi?id=58135

        Added statuses for failed/canceled resource loading.

        * English.lproj/localizedStrings.js:
        * inspector/Inspector.json:
        * inspector/InspectorResourceAgent.cpp:
        (WebCore::InspectorResourceAgent::didFailLoading):
        * inspector/front-end/NetworkManager.js:
        * inspector/front-end/NetworkPanel.js:
        * inspector/front-end/Resource.js:

Canonical link: https://commits.webkit.org/73324@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83564 268f45cc-cd09-0410-ab3c-d52691b4dbfc